; ModuleID = '/home/carl/AnghaBench/vlc/modules/gui/extr_ncurses.c_FillTextBox.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/gui/extr_ncurses.c_FillTextBox.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i32, i32 }

@COLS = common dso_local global i32 0, align 4
@BOX_OPEN = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [9 x i8] c"Open: %s\00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c"Find: %s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*)* @FillTextBox to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @FillTextBox(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %4 = load i32, i32* @COLS, align 4
  %5 = sub nsw i32 %4, 2
  store i32 %5, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = call i32 @DrawEmptyLine(i32 7, i32 1, i32 %6)
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load i64, i64* @BOX_OPEN, align 8
  %12 = icmp eq i64 %10, %11
  br i1 %12, label %13, label %20

13:                                               ; preds = %1
  %14 = load i32, i32* %3, align 4
  %15 = call i32 @_(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 2
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @mvnprintw(i32 7, i32 1, i32 %14, i32 %15, i32 %18)
  br label %27

20:                                               ; preds = %1
  %21 = load i32, i32* %3, align 4
  %22 = call i32 @_(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0))
  %23 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %23, i32 0, i32 1
  %25 = load i32, i32* %24, align 8
  %26 = call i32 @mvnprintw(i32 7, i32 1, i32 %21, i32 %22, i32 %25)
  br label %27

27:                                               ; preds = %20, %13
  ret void
}

declare dso_local i32 @DrawEmptyLine(i32, i32, i32) #1

declare dso_local i32 @mvnprintw(i32, i32, i32, i32, i32) #1

declare dso_local i32 @_(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
